<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20sp"
    android:textAlignment="center">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"/>

     <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_view"
        android:layout_width="111dp"
        android:layout_height="109dp"
        app:srcCompat="@drawable/group_101"

        android:transitionName="logo_image"

        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000000"
        android:textSize="40sp"

        android:transitionName="logo_text"

        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:transitionName="logo_desc"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:transitionName="username_trans"
            android:hint="Email"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:maxLines="1"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:transitionName="password_trans"

            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:elevation="10dp"
            android:background="@color/transparent"
            android:layout_margin="5dp"


            />




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="@color/black"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/login_signup_button"
            android:transitionName="login_signup_trans"

            />



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_user_signup"
android:layout_margin="5dp"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:textColor="#000"
    android:id="@id/signUp"


            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Login As a Staff "
            android:layout_margin="5dp"
            android:background="@color/black"
            android:elevation="0dp"
            android:textColor="#fff"
            android:id="@+id/staff_login"


            />


    </LinearLayout>


</LinearLayout>