<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20sp"

    android:textAlignment="center">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_view"
        android:layout_width="111dp"
        android:layout_height="109dp"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/group_101" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:transitionName="logo_text"
        android:text="Welcome"
        android:textColor="#000000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up to start your new journery"
        android:transitionName="logo_desc"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"

        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="Full Name"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:maxLines="1"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/phoneno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="Phone No"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:maxLines="1"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="Email"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:maxLines="1"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="Roll No"
            android:transitionName="username_trans"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"
            app:counterMaxLength="10"
            app:counterEnabled="true"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:maxLines="1"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>






        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:transitionName="password_trans"

            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:elevation="10dp"
            android:background="@color/transparent"
            android:layout_margin="5dp"


            />




        <Button
            android:id="@+id/login_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="@color/black"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="login_signup_trans"

            />



        <Button
            android:id="@+id/already_a_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Already a User"
            android:layout_margin="5dp"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:textColor="#000"


            />



    </LinearLayout>


</LinearLayout>
</ScrollView>